--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,11 +12,13 @@ httpx==0.28.1
 idna==3.11
 jiter==0.12.0
 openai==2.14.0
+psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
 requests==2.32.5
 sniffio==1.3.1
+SQLAlchemy==2.0.45
 starlette==0.50.0
 tqdm==4.67.1
 typing-inspection==0.4.2
