--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ annotated-types==0.7.0
 anyio==4.12.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
-click==8.3.1
+click>=8.0.0
 distro==1.9.0
 fastapi==0.128.0
 h11==0.16.0
