--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -1,14 +1,12 @@
 version: 1.0
-runtime: python3
+runtime: python311
 build:
   commands:
     build:
-      - pip install -r requirements.txt
+      - python3 -m pip install --upgrade pip
+      - python3 -m pip install -r requirements.txt
 run:
   runtime-version: 3.11
   command: uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
-  env:
-    - name: PORT
-      value: 8080
