--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -7,6 +7,6 @@ build:
       - python3 -m pip install -r requirements.txt
 run:
   runtime-version: 3.11
-  command: uvicorn main:app --host 0.0.0.0 --port 8080
+  command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
