--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -7,6 +7,9 @@ build:
       - python3 -m pip install -r requirements.txt
 run:
   runtime-version: 3.11
+  # This tells AWS to look inside the backend folder for your code
   command: python3 -m uvicorn main:app --host 0.0.0.0 --port 8080
   network:
     port: 8080
+  # Adding this ensures we are in the right folder during runtime
+  working-directory: backend
