--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,9 @@ name: Deploy Backend to AWS Lambda
 on:
   push:
     branches:
-      - main  # Triggers deployment only on push to main branch
+      - main
+    paths:
+      - 'backend/**'  # Only trigger if files in the backend folder change
 
 jobs:
   deploy:
@@ -30,9 +32,9 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: latest
         run: |
-          # Build the docker container
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          # Push it to ECR
+          # We tell Docker to use the backend folder as the context
+          # and look for the Dockerfile inside it.
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./backend
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Update Lambda Function Code
